infra/nexus/haproxy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus3-haproxy
spec:
  selector:
    matchLabels:
      deployment: nexus3-haproxy
  replicas: 4
  template:
    metadata:
      labels:
        deployment: nexus3-haproxy
        app: nexus3
        app.kubernetes.io/component: proxy
        app.kubernetes.io/name: haproxy
    spec:
      containers:
        - name: haproxy
          image: haproxy
          args:
            - haproxy
            - -f
            - /config/haproxy.cfg
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - containerPort: 8081
              name: http
            - containerPort: 8082
              name: docker-proxy
            - containerPort: 8083
              name: homelab-repo
            - containerPort: 8084
              name: redhat-proxy
            - containerPort: 8085
              name: quay-proxy
            - containerPort: 8086
              name: ghcr-proxy
            - containerPort: 8405
              name: http-metrics
          resources:
            requests:
              memory: 64Mi
              cpu: 10m
            limits:
              memory: 256Mi
              cpu: 200m
          readinessProbe:
            httpGet:
              port: 8405
              path: /healthz
            initialDelaySeconds: 10
            periodSeconds: 1
            successThreshold: 10
            failureThreshold: 1
      volumes:
        - name: config
          configMap:
            name: haproxy-config
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    deployment: nexus3-haproxy
                topologyKey: kubernetes.io/hostname
              weight: 10
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
