infra/nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker
  labels:
    app: nexus3-docker
spec:
  ports:
    - appProtocol: http
      port: 80
      protocol: TCP
      targetPort: 8082
  selector:
    app: nexus3
---
apiVersion: v1
kind: Service
metadata:
  name: homelab
  labels:
    app: nexus3-docker
spec:
  ports:
    - appProtocol: http
      port: 80
      protocol: TCP
      targetPort: 8083
  selector:
    app: nexus3
