infra/nexus/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: nexus3-tls
  labels:
    app: nexus3
  name: nexus3
spec:
  host: nexus.homelab.csfreak.com
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nexus3
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: nexus3-tls
  name: nexus3-docker
  labels:
    app: nexus3
spec:
  host: docker.homelab.csfreak.com
  port:
    targetPort: docker-proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nexus3-docker
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: nexus3-tls
  name: nexus3-docker-homelab
  labels:
    app: nexus3
spec:
  host: homelab.docker.homelab.csfreak.com
  port:
    targetPort: homelab-repo
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nexus3-docker
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: nexus3-tls
  name: nexus3-docker-redhat
  labels:
    app: nexus3
spec:
  host: redhat.docker.homelab.csfreak.com
  port:
    targetPort: redhat-proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nexus3-docker
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: nexus3-tls
  name: nexus3-docker-quay
  labels:
    app: nexus3
spec:
  host: quay.docker.homelab.csfreak.com
  port:
    targetPort: quay-proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nexus3-docker
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: nexus3-tls
    haproxy.router.openshift.io/ip_whitelist: 172.16.0.0/12 192.168.0.0/16 10.0.0.0/8 100.64.0.0/16
  name: nexus3-docker-ghcr
  labels:
    app: nexus3
spec:
  host: ghcr.docker.homelab.csfreak.com
  port:
    targetPort: ghcr-proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nexus3-docker
    weight: 100
  wildcardPolicy: None
